# ghidra-scripts

./: 8051_CCASE_Decode.py  8051_ICASE_Decode.py
extensions/: ccase.xml  icase.xml
java/: .gitignore  .project  settings.gradle
java/lib/: .project  build.gradle
java/lib/dep/: README.md
java/lib/src/main/java/: ShowConstantUseStruct.java
python/: pyproject.toml
